<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcMenuPrincipal">

    <!--fondo-->
    <View
        android:id="@+id/fondo_claro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondo_claro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--cabecera-->
    <View
        android:id="@+id/cabecera_claro"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/cabecera_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--pie de pagina-->
    <View
        android:id="@+id/pie_pagina_claro"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/pie_pagina_claro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <!--Nuestro centro-->
    <LinearLayout
        android:id="@+id/ly_centro_claro"
        android:layout_width="122dp"
        android:layout_height="80dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="118dp"
        android:background="@drawable/cont_iconos_claro"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ico_nuestro_centro_claro"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/icon_portico_claro"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/txtNuestroCentro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="3dp"
                android:text="@string/nuestro_centro"
                android:textColor="@color/negro_letra"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <!--Novedades-->
    <LinearLayout
        android:id="@+id/ly_novedades_claro"
        android:layout_width="122dp"
        android:layout_height="80dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/cont_iconos_claro"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ico_novedades_claro"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/icon_novedades_claro" />

            <TextView
                android:id="@+id/txtNovedades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="3dp"
                android:text="@string/noticias"
                android:textColor="@color/negro_letra"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <!--Profesorado-->
    <LinearLayout
        android:id="@+id/ly_profesorado_claro"
        android:layout_width="122dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/cont_iconos_claro"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_novedades_claro"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ico_profesorado_claro"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/icon_profesorado_claro" />

            <TextView
                android:id="@+id/txtProfesorado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="3dp"
                android:text="@string/profesorado"
                android:textColor="@color/negro_letra"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <!--Plano del centro-->
    <LinearLayout
        android:id="@+id/ly_plano_claro"
        android:layout_width="122dp"
        android:layout_height="80dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/cont_iconos_claro"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_centro_claro"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ico_plano_claro"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/icon_mapa_claro" />

            <TextView
                android:id="@+id/txtPlano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="3dp"
                android:text="@string/plano_del_centro"
                android:textColor="@color/negro_letra"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <!--Horario-->
    <LinearLayout
        android:id="@+id/ly_horario_claro"
        android:layout_width="122dp"
        android:layout_height="80dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/cont_iconos_claro"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_plano_claro"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ico_horarios_claro"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/icon_horarios_claro" />

            <TextView
                android:id="@+id/txtHorarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="3dp"
                android:text="@string/horarios"
                android:textColor="@color/negro_letra"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <!--Calendario-->
    <LinearLayout
        android:id="@+id/ly_calendario_claro"
        android:layout_width="122dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/cont_iconos_claro"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_profesorado_claro"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ico_calendario_claro"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/icon_calendario_claro" />

            <TextView
                android:id="@+id/txtCalendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="3dp"
                android:text="@string/calendario"
                android:textColor="@color/negro_letra"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <!--Youtube-->
    <LinearLayout
        android:id="@+id/ly_youtube_claro"
        android:layout_width="122dp"
        android:layout_height="80dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/cont_iconos_claro"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_horario_claro"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ico_youtube_claro"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/icon_youtube_claro" />

            <TextView
                android:id="@+id/txtYoutube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="3dp"
                android:text="@string/youtube"
                android:textColor="@color/negro_letra"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <!--Radio-->
    <LinearLayout
        android:id="@+id/ly_radio_claro"
        android:layout_width="122dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/cont_iconos_claro"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_calendario_claro"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ico_radio_claro"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/icon_radio_claro" />

            <TextView
                android:id="@+id/txtRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="3dp"
                android:text="@string/radio"
                android:textColor="@color/negro_letra"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <!--titulo de cabecera-->
    <LinearLayout
        android:id="@+id/ly_titulo_claro"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_titulo_claro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textSize="28dp"
            android:fontFamily="@font/sriracha"
            android:textColor="@color/white"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>