<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".horarios.AcHorarios">

    <!--fondo-->
    <View
        android:id="@+id/fondo_claro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E8E9EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--cabecera-->
    <View
        android:id="@+id/cabecera_claro"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/cabecera_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--pie de pagina-->
    <View
        android:id="@+id/pie_pagina_claro"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@drawable/pie_pagina_claro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <!--Formacion profesional-->
    <LinearLayout
        android:id="@+id/ly_fp_claro"
        android:layout_width="338dp"
        android:layout_height="119dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/cont_fila_claro"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtFormacionProfesional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="12dp"
                android:text="@string/formacion_profesional"
                android:textColor="@color/negro_letra"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <!--Bachillerato-->
    <LinearLayout
        android:id="@+id/ly_bachillerato_claro"
        android:layout_width="338dp"
        android:layout_height="119dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/cont_fila_claro"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_fp_claro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtBachillerato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="12dp"
                android:text="@string/bachillerato"
                android:textColor="@color/negro_letra"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <!--Educacion secundaria-->
    <LinearLayout
        android:id="@+id/ly_eso_claro"
        android:layout_width="338dp"
        android:layout_height="119dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/cont_fila_claro"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ly_bachillerato_claro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtEso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="12dp"
                android:text="@string/educacion_secundaria"
                android:textColor="@color/negro_letra"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <!--titulo de cabecera-->
    <LinearLayout
        android:id="@+id/ly_titulo_horarios_claro"
        android:layout_width="327dp"
        android:layout_height="59dp"
        android:layout_marginTop="55dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_titulo_osc"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:src="@drawable/titulo_horarios" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>